# libkgp_wrapper

./: .gitignore  CMakeLists.txt  Config.h.in  libopi_wrapAuthServer.cpp  libopi_wrapAuthServer.h  libopi_wrapDnsServer.cpp  libopi_wrapDnsServer.h  libopi_wrapSysConfig.cpp  libopi_wrapSysConfig.h  libopi_wrapSysInfo.cpp  libopi_wrapSysInfo.h  libopi_wrapper.cpp  libopi_wrapper.h  libopi_wrapper.pc.in
debian/: .gitignore  changelog  control  copyright  rules
test/: CMakeLists.txt  TestWrapper.cpp  TestWrapper.h  test.cpp
